--- a/src/WinKCarAudio/appsettings.json
+++ b/src/WinKCarAudio/appsettings.json
@@ -1,6 +1,6 @@
-﻿{
+{
   "ApplicationInsights": {
-    "InstrumentationKey": ""
+    "InstrumentationKey": "4e2b9784-eaad-45f7-b415-7ede4a4bf97b"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WinKCarAudio-21fd3561-4628-46e4-9c44-96f328dd82ec;Trusted_Connection=True;MultipleActiveResultSets=true"
