cleaning up asset controller

--- a/src/WinKCarAudio/appsettings.json
+++ b/src/WinKCarAudio/appsettings.json
@@ -12,5 +12,10 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Data": {
+    "WinKCarAudioContext": {
+      "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=WinKCarAudioContext-adf14973-6ef4-4582-b430-1977d1c0fb29;Trusted_Connection=True;MultipleActiveResultSets=true"
+    }
   }
 }
