added some 3rd party libraries, still trying to fix published version code 500

--- a/src/WinKCarAudio/appsettings.json
+++ b/src/WinKCarAudio/appsettings.json
@@ -3,6 +3,7 @@
     "InstrumentationKey": "4e2b9784-eaad-45f7-b415-7ede4a4bf97b"
   },
   "ConnectionStrings": {
+    //https://my.freenom.com/clientarea.php?action=domains   <--domain management
     //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WinKCarAudio-21fd3561-4628-46e4-9c44-96f328dd82ec;Trusted_Connection=True;MultipleActiveResultSets=true",
     //"DefaultConnection": "Server=162.246.156.117, 1434; Initial Catalog=myLatiumDB3; User Id=myLatiumDB3User; Password=ThisBetterWork#2017!;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=false"
     "DefaultConnection": "Server=tcp:winkcaraudio.database.windows.net,1433;Initial Catalog=WinkCarAudio;Persist Security Info=False;User ID=vinson;Password=Rnb4life;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
@@ -17,7 +18,7 @@
   },
   "Data": {
     "WinKCarAudioContext": {
-      "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=WinKCarAudioContext-adf14973-6ef4-4582-b430-1977d1c0fb29;Trusted_Connection=True;MultipleActiveResultSets=true"
+      "ConnectionString": "Server=tcp:winkcaraudio.database.windows.net,1433;Initial Catalog=WinkCarAudio;Persist Security Info=False;User ID=vinson;Password=Rnb4life;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     }
   }
 }
